LU-20123 ldlm: fix lock_limit_mb cannot increase

lock_limit_mb_store() rejects any value larger than the
current lock_limit_mb due to a misplaced validation copied
from the reclaim_threshold side during the debugfs-to-sysfs
migration. This makes it impossible to increase lock_limit_mb
once lowered.

Move the check to lock_reclaim_threshold_mb_store() where it
belongs, preventing reclaim_threshold from exceeding
lock_limit, and remove it from lock_limit_mb_store(). The
existing check in lock_limit_mb_store() that validates
lock_limit_mb >= lock_reclaim_threshold_mb is retained.

Fixes: 319fe53bca ("LU-8066 ldlm: move debugfs entries to general sysfs")
Change-Id: Ifbec24a6ac440aa5ee36a6d9f22fbe1210062161
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65252
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Xiao Yang <xyang@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>